--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
       "request": "launch",
       "mode": "auto",
       "program": "${fileWorkspaceFolder}"
+    },
+    {
+      "name": "Test Current File",
+      "type": "go",
+      "request": "launch",
+      "mode": "test",
+      "program": "${fileDirname}"
     }
   ]
 }
